# Useo_back

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Useo_back/: asgi.py  settings.py  urls.py  wsgi.py
books/: admin.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_readingrelation_add_date.py  0002_rename_book_isbn_readingrelation_book_and_more.py  0003_readingrelation_reading_progress.py  0004_alter_readingrelation_rate.py  0005_alter_readingrelation_reading_duration.py
notes/: admin.py  models.py  serializers.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_alter_note_add_date_alter_note_last_modify.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_followingrelation_follower_and_more.py  0002_alter_user_library_latitude_and_more.py  0003_alter_user_library_latitude_and_more.py  0003_followingrelation.py  0004_alter_user_library_latitude_and_more.py
